--- a/GoogleBooksApp/app/src/main/AndroidManifest.xml
+++ b/GoogleBooksApp/app/src/main/AndroidManifest.xml
@@ -17,4 +17,8 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+
+
 </manifest>
